MET-5684 General technical debt (#644)
* MET-5684 Fix toList issues

* MET-5684 Pattern Matching for "instanceof" operator

* MET-5684 Record type

* MET-5684 New enhanced switch