@@ -8,7 +8,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 
 /**
@@ -162,7 +161,7 @@ public class Vocabulary {
 
     private static List<String> normalizeStringList(List<String> input) {
       return input.stream().filter(StringUtils::isNotBlank).map(String::trim)
-              .collect(Collectors.toList());
+                  .toList();
     }
 
     public Vocabulary build() {
